[package]
name = "instigator"
version = "3.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
sysinfo = "0.30.5"
dll-syringe = "0.15.2"
log = "0.4.20"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
chrono = "0.4.31"
dirs = "5.0.1"
winapi = { version = "0.3.9", features = ["tlhelp32"]}
clap = { version = "4.4.16", features = ["derive"] }
tokio = "1.35.1"
ntapi = "0.4.1"
windows = "0.52.0"
opener = "0.7.2"
ctrlc = "3.4.5"

[build-dependencies]
embed-resource = "2.4.1"
